--- a/landingPage/styles.css
+++ b/landingPage/styles.css
@@ -6,7 +6,7 @@
     max-width: 80%;
     margin: auto;
     padding: 50px;
-    background-color: #6f096a;
+    background-color: #f256f2;
     font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
